3.4
	+ Use proper dlz library for bind9.9
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Lowercase LDB domains for comparision
	+ Update TXT _kerberos record on domain rename
	+ Added missing EBox::Exceptions uses
	+ Read DNS zones from samba database while provisioning
	+ Enable sortlist option by default in /etc/zentyal/dns.conf
	+ Delete migration code from old versions
	+ Fix set of dynamic attribute in domain table when samba module is enabled
	  again
	+ Do not write reverse zone files if generate_reverse_zones is false
	+ Do not set localhost as primary resolver if users module is configured
	  in external AD mode. In this case, the AD DNS server must be used.
	+ Added network as enabledepend, needed by the resolvconf management
	+ Enable resolvconf updates when starting and stopping bind9 daemon
	+ Enforce include of 127.0.0.1 in DNS resolvers when enabling
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.5
	+ Override daemons when migrating from 3.0
3.1.4
	+ Use the new samba module state flag isProvisioning to set the samba
	  flag on DomainTable rows
	+ Do not try to update the zone while samba is provisioning the domain
3.1.3
	+ Adapted to new CSS styles
	+ Remove the setting desktop service in _preSetConf and initial-setup
3.1.2
	+ Added sortlist support.
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Adapt firewall rules to new accept chains
	+ Set transparent DNS cache firewall rules unless the module is
	  temporary stopped
	+ Set transparent DNS cache firewall rules in Firewall Helper
3.1
	+ Removed 3.0.X migration code
	+ Implemented _daemonsToDisable()
	+ Depend on zentyal-core 3.1
3.0.9
	+ Fixed bind9 dependency to allow to install it with higher versions
	+ Do not try to add duplicated interface addresses
3.0.8
	+ Fix intnets config key parsing and validation