@@ -13,7 +13,7 @@ Package: zentyal-dns
 Architecture: all
 Depends: zentyal-core (>= 3.4~1), zentyal-core (<< 3.5), zentyal-firewall,
          libdigest-hmac-perl, bind9 (>= 1:9.8.1.dfsg.P1-4ubuntu0.7+zentyal1),
-         ${misc:Depends}
+         libgssapi-perl, ${misc:Depends}
 Description: Zentyal - DNS Service
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
