@@ -1,4 +1,5 @@
 3.4
+	+ Use GSS updates instead of patched bind9
 	+ Use proper dlz library for bind9.9
 	+ Use service instead of deprecated invoke-rc.d for init.d scripts
 	+ Set version to 3.4
